--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -21,7 +21,7 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/all']">Wszystkie produkty</a>
+            <a class="nav-link text-dark" [routerLink]="['/products']">Wszystkie produkty</a>
           </li>
         </ul>
         <app-login-menu></app-login-menu>
