--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,13 +18,16 @@
         [ngClass]="{ show: isExpanded }">
         <ul class="navbar-nav flex-grow">
           <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+            <a class="nav-link text-dark" [routerLink]="['/']">Strona główna</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/product']">Wszystkie produkty</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/login']">Logowanie</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/register']">Rejestracja</a>
           </li>
         </ul>
       </div>
