--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/register/register.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/register/register.component.html
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-lg-4"></div>
     <div class="col-lg-4">
-      <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <form [formGroup]="registerForm" (ngSubmit)="register()">
         <div class="form-group">
           <label for="inputEmail">Adres email</label>
           <input type="email" class="form-control" formControlName="email">
@@ -24,11 +24,14 @@
         <div *ngIf="password.touched && password.errors?.required" class="alert alert-danger">
           This field is reqired!
         </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="check">
-          <label class="form-check-label" for="check">Zapamiętaj mnie</label>
+        <div class="form-group">
+          <label for="inputConfirmPassword">Powtórz hasło</label>
+          <input type="password" class="form-control" formControlName="confirmPassword">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <div *ngIf="confirmPassword.touched && confirmPassword.errors?.required" class="alert alert-danger">
+          This field is reqired!
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
       </form>
     </div>
     <div class="col-lg-4"></div>
