--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/login/login.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/login/login.component.html
@@ -11,14 +11,14 @@
     <div class="col-lg-4">
       <form [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="form-group">
-          <label for="inputEmail">Adres email</label>
+          <label for="email">Adres email</label>
           <input type="email" class="form-control" formControlName="email">
         </div>
         <div *ngIf="email.touched && email.errors?.required" class="alert alert-danger">
           This field is reqired!
         </div>
         <div class="form-group">
-          <label for="inputPassword">Hasło</label>
+          <label for="password">Hasło</label>
           <input type="password" class="form-control" formControlName="password">
         </div>
         <div *ngIf="password.touched && password.errors?.required" class="alert alert-danger">
@@ -28,7 +28,7 @@
           <input type="checkbox" class="form-check-input" id="check">
           <label class="form-check-label" for="check">Zapamiętaj mnie</label>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary">Zaloguj</button>
       </form>
     </div>
     <div class="col-lg-4"></div>
