--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/register/register.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/register/register.component.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title></title>
 </head>
 <body>
@@ -11,27 +12,48 @@
     <div class="col-lg-4">
       <form [formGroup]="registerForm" (ngSubmit)="register()">
         <div class="form-group">
-          <label for="inputEmail">Adres email</label>
+          <label for="email">Adres email</label>
           <input type="email" class="form-control" formControlName="email">
         </div>
         <div *ngIf="email.touched && email.errors?.required" class="alert alert-danger">
           This field is reqired!
         </div>
         <div class="form-group">
-          <label for="inputPassword">Hasło</label>
+          <label for="password">Hasło</label>
           <input type="password" class="form-control" formControlName="password">
         </div>
         <div *ngIf="password.touched && password.errors?.required" class="alert alert-danger">
           This field is reqired!
         </div>
         <div class="form-group">
-          <label for="inputConfirmPassword">Powtórz hasło</label>
+          <label for="confirmPassword">Powtórz hasło</label>
           <input type="password" class="form-control" formControlName="confirmPassword">
         </div>
         <div *ngIf="confirmPassword.touched && confirmPassword.errors?.required" class="alert alert-danger">
           This field is reqired!
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <div class="form-group">
+          <label for="name">Narodowość</label>
+          <select formControlName="nationality"
+                  id="nationality"
+                  class="form-control">
+            <option value="">- Select -</option>
+            <option *ngFor="let nationality of nationalities" [ngValue]="nationality.nationality">
+              {{nationality.nationality}}
+            </option>
+          </select>
+        </div>
+        <div *ngIf="nationality.touched && nationality.errors?.required" class="alert alert-danger">
+          This field is reqired!
+        </div>
+        <div class="form-group">
+          <label for="dateOfBirth">Data urodzenia</label>
+          <input type="date" class="form-control" formControlName="dateOfBirth" />
+        </div>
+        <div *ngIf="dateOfBirth.touched && dateOfBirth.errors?.required" class="alert alert-danger">
+          This field is reqired!
+        </div>
+        <button type="submit" class="btn btn-primary">Zarejestruj</button>
       </form>
     </div>
     <div class="col-lg-4"></div>
