--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/products/list/list.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/products/list/list.component.html
@@ -29,7 +29,7 @@
       </td>
       <td>{{ product.unitName }}</td>
       <td>{{ product.weight }}</td>
-      <td>{{ product.productImagePath }}</td>
+      <td><img [src]="product.productImagePath" alt="..." width="100" height="100"/></td>
       <td class="text-center">
         <a href="#" [routerLink]="['/products/', product.productId, 'details']" class="btn btn-info btn-sm">Wyświetl</a>
         <a href="#" [routerLink]="['/products/', product.productId, 'edit']" class="btn btn-primary btn-sm">Edytuj</a>
