--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/products/list/list.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/products/list/list.component.html
@@ -19,7 +19,11 @@
   </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let product of products">
+    <tr *ngFor="let product of products | paginate: {
+        itemsPerPage: 10,
+        currentPage: page,
+        totalItems: totalLength
+        }">
       <td>{{ product.productName }}</td>
       <td>{{ product.categoryName }}</td>
       <td>
@@ -38,3 +42,6 @@
     </tr>
   </tbody>
 </table>
+<div>
+  <pagination-controls (pageChange)="page = $event"></pagination-controls>
+</div>
