--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -21,7 +21,13 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Strona główna</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/product']">Wszystkie produkty</a>
+            <a class="nav-link text-dark" [routerLink]="['/product']">Produkty</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="[]">Potrawy</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="[]">Jadłospisy</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/login']">Logowanie</a>
