Capture client errors, logout, fix errors

--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/login/login.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/login/login.component.html
@@ -9,6 +9,9 @@
   <div class="row">
     <div class="col-lg-4"></div>
     <div class="col-lg-4">
+      <div class="alert alert-danger" *ngIf="loginError">
+        {{loginError}}
+      </div>
       <form [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="form-group">
           <label for="email">Adres email</label>
