--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,11 +29,14 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="[]">Jadłospisy</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
+          <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="!isLoggedIn">
             <a class="nav-link text-dark" [routerLink]="['/login']">Logowanie</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
+          <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="!isLoggedIn">
             <a class="nav-link text-dark" [routerLink]="['/register']">Rejestracja</a>
+          </li>
+          <li *ngIf="isLoggedIn">
+            <a class="nav-link text-dark" [routerLink]="['/login']">Wyloguj</a>
           </li>
         </ul>
       </div>
