Update the list, view, and form for adding and editing products

--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/products/details/details.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/products/details/details.component.html
@@ -29,7 +29,11 @@
             <td><b>Magnez[mg]:</b> {{ product.magnesium }} mg</td>
           </tr>
           <tr>
-            <td><b>Kolejna linia:</b> {{ product.magnesium }} g</td>
+            <td><b>Błonnik[g]:</b> {{ product.fiber }} g</td>
+            <td><b>Białko[g]:</b> {{ product.protein }} g</td>
+            <td><b>Tłuszcz[g]:</b> {{ product.fat }} g</td>
+            <td><b>Węglowodany przyswajalne[g]:</b> {{ product.assimilableCarbohydrates }} g</td>
+            <td><b>Wymiennik węglowodanowy:</b> {{ product.carbohydrateReplacement }} </td>
           </tr>
         </table>
       </li>
