--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/products/create/create.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/products/create/create.component.html
@@ -78,9 +78,9 @@
                    class="form-control" />
           </td>
           <td>
-            <label for="folate">Foliany[qg]:</label>
-            <input formControlName="folate"
-                   id="folate"
+            <label for="assimilableCarbohydrates">Węglowodany przyswajalne[g]:</label>
+            <input formControlName="assimilableCarbohydrates"
+                   id="assimilableCarbohydrates"
                    type="number"
                    class="form-control" />
           </td>
@@ -91,10 +91,42 @@
                    type="number"
                    class="form-control" />
           </td>
+        </tr>
+        <tr>
           <td>
-            <label for="calcium">Wapń[mg]:</label>
-            <input formControlName="calcium"
-                   id="calcium"
+            <label for="fiber">Błonnik[g]:</label>
+            <input formControlName="fiber"
+                   id="fiber"
+                   type="number"
+                   class="form-control" />
+          </td>
+          <td>
+            <label for="protein">Białko[g]:</label>
+            <input formControlName="protein"
+                   id="protein"
+                   type="number"
+                   class="form-control" />
+          </td>
+          <td>
+            <label for="carbohydrateReplacement">Wymiennik węglowodanowy:</label>
+            <input formControlName="carbohydrateReplacement"
+                   id="carbohydrateReplacement"
+                   type="number"
+                   class="form-control" />
+          </td>
+          <td>
+            <label for="folate">Foliany[qg]:</label>
+            <input formControlName="folate"
+                   id="folate"
+                   type="number"
+                   class="form-control" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="fat">Tłuszcz[g]:</label>
+            <input formControlName="fat"
+                   id="fat"
                    type="number"
                    class="form-control" />
           </td>
@@ -105,11 +137,10 @@
                    type="number"
                    class="form-control" />
           </td>
-        </tr>
-        <tr>
-          <td><label for="magnesium">Magnez[mg]:</label>
-            <input formControlName="magnesium"
-                   id="magnesium"
+          <td>
+            <label for="calcium">Wapń[mg]:</label>
+            <input formControlName="calcium"
+                   id="calcium"
                    type="number"
                    class="form-control" />
           </td>
