--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/products/list/list.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/products/list/list.component.html
@@ -24,6 +24,12 @@
   <input type="checkbox" (click)="showCalcium()"> Wapń
   <br />
   <input type="checkbox" (click)="showMagnesium()"> Magnez
+  <input type="checkbox" (click)="showFiber()"> Błonnik
+  <input type="checkbox" (click)="showProtein()"> Białko
+  <input type="checkbox" (click)="showFat()"> Tłuszcz
+  <br />
+  <input type="checkbox" (click)="showAssimilableCarbohydrates()"> Węglowodany przyswajalne
+  <input type="checkbox" (click)="showCarbohydrateReplacement()"> Wymiennik węglowodanowy
 </div>
 <br />
 <div class="table-responsive text-nowrap">
@@ -42,6 +48,11 @@
         <th *ngIf="vitaminD">Witamina D[qg]</th>
         <th *ngIf="calcium">Wapń[mg]</th>
         <th *ngIf="magnesium">Magnez[mg]</th>
+        <th *ngIf="fiber">Błonnik[g]</th>
+        <th *ngIf="protein">Białko[g]</th>
+        <th *ngIf="fat">Tłuszcz[g]</th>
+        <th *ngIf="assimilableCarbohydrates">Węglowodany przyswajalne[g]</th>
+        <th *ngIf="carbohydrateReplacement">Wymiennik węglowodanowy</th>
         <th>Zdjęcie</th>
         <th width="300px"></th>
       </tr>
@@ -67,6 +78,11 @@
         <td *ngIf="vitaminD">{{ product.vitaminD }} qg</td>
         <td *ngIf="calcium">{{ product.calcium }} mg</td>
         <td *ngIf="magnesium">{{ product.magnesium }} mg</td>
+        <td *ngIf="fiber">{{ product.fiber }} g</td>
+        <td *ngIf="protein">{{ product.protein }} g</td>
+        <td *ngIf="fat">{{ product.fat }} g</td>
+        <td *ngIf="assimilableCarbohydrates">{{ product.assimilableCarbohydrates }} g</td>
+        <td *ngIf="carbohydrateReplacement">{{ product.carbohydrateReplacement }}</td>
         <td><img [src]="product.productImagePath" alt="..." width="100" height="100" /></td>
         <td class="text-center">
           <a href="#" [routerLink]="['/products/', product.productId, 'details']" class="btn btn-info btn-sm">Wyświetl</a>
