Creating the KindOfDto and TypeDto model, changing the namespaces UpdateDishDto, UpdateMenuDto, CategoryService, GroupService, UnitService, DishService and IDishService. Creating IKindOfService and ITypeService interface, KindOfService and TypeService

--- a/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Projekt Web API/Papu/Papu/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -24,10 +24,10 @@
             <a class="nav-link text-dark" [routerLink]="['/product']">Produkty</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="[]">Potrawy</a>
+            <a class="nav-link text-dark" [routerLink]="['/dish']">Potrawy</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="[]">Jadłospisy</a>
+            <a class="nav-link text-dark" [routerLink]="['/menu']">Jadłospisy</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="!isLoggedIn">
             <a class="nav-link text-dark" [routerLink]="['/login']">Logowanie</a>
